--- a/public/source/design.html
+++ b/public/source/design.html
@@ -13,79 +13,113 @@
   <body id="design-body">
     <div id="navbar">
       <a class="nav-link" href="./dev.html">Development</a>
-      <a class="nav-link" href="#">Contact</a>      
+      <a class="nav-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume.pdf?alt=media&token=9085b70b-cd51-4883-83c4-26bfaaaab9af">Contact</a>      
     </div>
 
-      <div class="bs-contain container">
-        <div id="list" class="animated row">
+    <div class="bs-contain container">
+      <div id="list" class="animated row">
 
-            <div class="list-item animated fadeInUp col-12 col-sm-6 col-md-4 ">
-              <div class="imgs">
-                <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/d5.jpg?alt=media&token=8d751e8f-b965-40b6-92c5-6ec0faf64cb9">    
-                  <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/d5-thumb.jpg?alt=media&token=9a95b8f1-d84e-47b8-bc94-48d126a75b4c)"></div>
-                </a>
-                <div class="icons"></div>
-              </div>
-              <p class="design-title">Automation</p>
+        <div class="list-item animated fadeInUp col-12 col-sm-6 col-md-4 ">
+          <div class="imgs">
+            <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/d5.jpg?alt=media&token=8d751e8f-b965-40b6-92c5-6ec0faf64cb9">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/d5-thumb.jpg?alt=media&token=9a95b8f1-d84e-47b8-bc94-48d126a75b4c)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" />                
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/revit.jpg?alt=media&token=b3783a9b-c0ab-4835-8880-eb01e06f0201" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/rhino.jpg?alt=media&token=5c736f4d-1116-4181-8b2e-c1a9948713d6" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/grass.jpg?alt=media&token=2f6e2649-28ea-43d3-9abf-27031ebafeaf" />
             </div>
+          </div>
+          <p class="design-title">Automation</p>
+        </div>
 
-            <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
-                <div class="imgs">
-                  <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fcdc.jpg?alt=media&token=fc5a5a34-03b8-4ce4-90ae-abe6be207da3">    
-                    <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fcdc-thumb.jpg?alt=media&token=df7721a0-db6e-4e29-b746-601570c68ed8)"></div>
-                  </a>
-                  <div class="icons"></div>
-                </div>
-                <p class="design-title">Installation</p>
+        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fcdc.jpg?alt=media&token=fc5a5a34-03b8-4ce4-90ae-abe6be207da3">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fcdc-thumb.jpg?alt=media&token=df7721a0-db6e-4e29-b746-601570c68ed8)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" />                
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/rhino.jpg?alt=media&token=5c736f4d-1116-4181-8b2e-c1a9948713d6" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/grass.jpg?alt=media&token=2f6e2649-28ea-43d3-9abf-27031ebafeaf" />
+            </div>
+          </div>
+          <p class="design-title">Installation</p>
+        </div>
+
+        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/cast.jpg?alt=media&token=b48e1462-6177-4695-af0f-d56c673e13ba">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/cast-thumb.jpg?alt=media&token=817d2f07-8740-47bb-ad0d-a2c8fdd88c26)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/rhino.jpg?alt=media&token=5c736f4d-1116-4181-8b2e-c1a9948713d6" />                
+            </div>
+          </div>
+          <p class="design-title">Cast</p>
+        </div>
+
+        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/enclosure.pdf?alt=media&token=ee3744b3-d6a9-42eb-8aad-3e989c023f8a">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/enclosure-thumb.jpg?alt=media&token=78054656-fc6a-4062-8bae-e8533fbbbc6a)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/illustrator.jpg?alt=media&token=540943b4-19b0-4988-a346-d7926931dde0" />                
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/revit.jpg?alt=media&token=b3783a9b-c0ab-4835-8880-eb01e06f0201" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/rhino.jpg?alt=media&token=5c736f4d-1116-4181-8b2e-c1a9948713d6" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/grass.jpg?alt=media&token=2f6e2649-28ea-43d3-9abf-27031ebafeaf" />
+            </div>
+          </div>
+          <p class="design-title">Enclosure</p>
+        </div>
+
+        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a onclick="lightbox(0)" class="design-link" href="#">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/maps-thumb.png?alt=media&token=9c586b98-5592-4dcc-8e81-313277e880c2)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/illustrator.jpg?alt=media&token=540943b4-19b0-4988-a346-d7926931dde0" />                                
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/acad.jpg?alt=media&token=c5e56f11-4134-4911-91e2-f22a715816c1" />
               </div>
+          </div>
+          <p class="design-title">Maps</p>
+        </div>
 
-              <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
-                <div class="imgs">
-                  <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/cast.jpg?alt=media&token=b48e1462-6177-4695-af0f-d56c673e13ba">    
-                    <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/cast-thumb.jpg?alt=media&token=817d2f07-8740-47bb-ad0d-a2c8fdd88c26)"></div>
-                  </a>
-                  <div class="icons"></div>
-                </div>
-                <p class="design-title">Cast</p>
-              </div>
-
-              <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
-                <div class="imgs">
-                  <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/enclosure.pdf?alt=media&token=ee3744b3-d6a9-42eb-8aad-3e989c023f8a">    
-                    <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/enclosure-thumb.jpg?alt=media&token=78054656-fc6a-4062-8bae-e8533fbbbc6a)"></div>
-                  </a>
-                  <div class="icons"></div>
-                </div>
-                <p class="design-title">Enclosure</p>
-              </div>
-
-              <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
-                  <div class="imgs">
-                    <a onclick="lightbox(0)" class="design-link" href="#">    
-                      <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/maps-thumb.png?alt=media&token=9c586b98-5592-4dcc-8e81-313277e880c2)"></div>
-                    </a>
-                    <div class="icons"></div>
-                  </div>
-                  <p class="design-title">Maps</p>
-                </div>
-
-                <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
-                    <div class="imgs">
-                      <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/usermap.jpg?alt=media&token=98f76602-716d-485a-8334-dbcbccf87bf6">    
-                        <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/usermap-thumb.jpg?alt=media&token=924addb0-f97c-4e7d-bdef-ff4292c3f438)"></div>
-                      </a>
-                      <div class="icons"></div>
-                    </div>
-                    <p class="design-title">Wireframe</p>
-                  </div>
-
-
-
-
-
+        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/usermap.jpg?alt=media&token=98f76602-716d-485a-8334-dbcbccf87bf6">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/usermap-thumb.jpg?alt=media&token=924addb0-f97c-4e7d-bdef-ff4292c3f438)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/acad.jpg?alt=media&token=c5e56f11-4134-4911-91e2-f22a715816c1" />
+             </div>
+          </div>
+          <p class="design-title">Wireframe</p>
         </div>
       </div>
-       <!--start MAPS GALLERY-->
+    </div>
+
+    <div id="legend" class="container.fluid">
+      <!-- <h3 class="legend-title">Icon Legend</h3> -->
+      <div class="row icon-bank">
+        <p class="legend-item">Photoshop  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" /></p>
+        <p class="legend-item">Illustrator  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/illustrator.jpg?alt=media&token=540943b4-19b0-4988-a346-d7926931dde0" /></p>
+        <p class="legend-item">3DS Max  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/3ds.jpg?alt=media&token=dcba88c7-7156-4bb7-becb-9b523fcd64d8" /></p>
+        <p class="legend-item">AutoCAD  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/acad.jpg?alt=media&token=c5e56f11-4134-4911-91e2-f22a715816c1" /></p>
+        <p class="legend-item">Revit  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/revit.jpg?alt=media&token=b3783a9b-c0ab-4835-8880-eb01e06f0201" /></p>
+        <p class="legend-item">Rhino  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/rhino.jpg?alt=media&token=5c736f4d-1116-4181-8b2e-c1a9948713d6" /></p>
+        <p class="legend-item">Grasshopper  <img class="legend-icons" width="30px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/grass.jpg?alt=media&token=2f6e2649-28ea-43d3-9abf-27031ebafeaf" /></p>
+      </div>
+    </div>
+
+
+
+  <!-------start MAPS GALLERY------------>
     <div style="display:none;">
         <div id="ninja-slider">
             <div class="slider-inner">
