--- a/public/source/design.html
+++ b/public/source/design.html
@@ -17,9 +17,9 @@
     </div>
 
     <div class="bs-contain container">
-      <div id="list" class="animated row">
+      <div id="list" class="row">
 
-        <div class="list-item animated fadeInUp col-12 col-sm-6 col-md-4 ">
+        <div class="list-item animated fadeInLeft col-12 col-sm-6 col-md-4 ">
           <div class="imgs">
             <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/d5.jpg?alt=media&token=8d751e8f-b965-40b6-92c5-6ec0faf64cb9">    
               <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/d5-thumb.jpg?alt=media&token=9a95b8f1-d84e-47b8-bc94-48d126a75b4c)"></div>
@@ -34,7 +34,7 @@
           <p class="design-title">Automation</p>
         </div>
 
-        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+        <div class="list-item animated fadeInDown  col-12 col-sm-6 col-md-4   ">
           <div class="imgs">
             <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fcdc.jpg?alt=media&token=fc5a5a34-03b8-4ce4-90ae-abe6be207da3">    
               <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fcdc-thumb.jpg?alt=media&token=df7721a0-db6e-4e29-b746-601570c68ed8)"></div>
@@ -48,7 +48,7 @@
           <p class="design-title">Installation</p>
         </div>
 
-        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+        <div class="list-item animated fadeInRight  col-12 col-sm-6 col-md-4   ">
           <div class="imgs">
             <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/cast.jpg?alt=media&token=b48e1462-6177-4695-af0f-d56c673e13ba">    
               <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/cast-thumb.jpg?alt=media&token=817d2f07-8740-47bb-ad0d-a2c8fdd88c26)"></div>
@@ -60,7 +60,7 @@
           <p class="design-title">Cast</p>
         </div>
 
-        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+        <div class="list-item animated fadeInLeft  col-12 col-sm-6 col-md-4   ">
           <div class="imgs">
             <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/enclosure.pdf?alt=media&token=ee3744b3-d6a9-42eb-8aad-3e989c023f8a">    
               <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/enclosure-thumb.jpg?alt=media&token=78054656-fc6a-4062-8bae-e8533fbbbc6a)"></div>
@@ -75,7 +75,7 @@
           <p class="design-title">Enclosure</p>
         </div>
 
-        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+        <div class="list-item animated fadeInDown  col-12 col-sm-6 col-md-4   ">
           <div class="imgs">
             <a onclick="lightbox(0)" class="design-link" href="#">    
               <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/maps-thumb.png?alt=media&token=9c586b98-5592-4dcc-8e81-313277e880c2)"></div>
@@ -89,7 +89,7 @@
           <p class="design-title">Maps</p>
         </div>
 
-        <div class="list-item animated fadeInUp  col-12 col-sm-6 col-md-4   ">
+        <div class="list-item animated fadeInRight  col-12 col-sm-6 col-md-4   ">
           <div class="imgs">
             <a class="design-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/usermap.jpg?alt=media&token=98f76602-716d-485a-8334-dbcbccf87bf6">    
               <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/usermap-thumb.jpg?alt=media&token=924addb0-f97c-4e7d-bdef-ff4292c3f438)"></div>
@@ -101,6 +101,32 @@
           </div>
           <p class="design-title">Wireframe</p>
         </div>
+
+        <div class="list-item animated fadeInLeft  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a onclick="lightbox(5)" class="design-link" href="#">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/render-thumb.jpg?alt=media&token=0daa9ca8-6616-4406-8fa9-e694a39b4176)"></div>
+            </a>
+            <div class="icons">
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" />
+                <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/3ds.jpg?alt=media&token=dcba88c7-7156-4bb7-becb-9b523fcd64d8" />
+            </div>
+          </div>
+          <p class="design-title">Rendering</p>
+        </div>
+
+        <div class="list-item animated fadeInDown  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a onclick="lightbox(3)" class="design-link" href="#">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/section-thumb.jpg?alt=media&token=85750603-8966-4b1d-93b8-e980734cfe6a)"></div>
+            </a>
+            <div class="icons">
+       
+             </div>
+          </div>
+          <p class="design-title">Hand</p>
+        </div>
+
       </div>
     </div>
 
@@ -145,6 +171,100 @@
                             <p>preliminary parking logistics study</p> 
                         </div>
                     </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/pastel.jpg?alt=media&token=49b14a50-c370-43e0-bc8d-19116aa6c3cb"></a>
+                      <div class="caption">
+                          <h6>Hue | Saturation</h6>
+                          <p>perspective in pastel</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/tone.jpg?alt=media&token=2e54ed71-ebde-47d3-8d52-80442100ed86"></a>
+                      <div class="caption">
+                          <h6>Tone (shade/shadow)</h6>
+                          <p>graphite</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/dining.jpg?alt=media&token=9f9c8b5c-c38a-4bd0-b1f1-b2ab7b8ad729"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(1 / 11)</p> 
+                      </div>
+                    </li>
+
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/living.jpg?alt=media&token=6a21a18b-344a-409d-9841-2c3782978d09"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(2 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/lobby.jpg?alt=media&token=aeea2efd-d142-401a-bbd7-23187a478dd8"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(3 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/lounge.jpg?alt=media&token=0434d3f3-1106-4726-9da8-536c0ee0ecc8"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(4 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/dine.jpg?alt=media&token=41b31655-ca3e-435e-abfe-587917f31c8f"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(5 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/golf.jpg?alt=media&token=89caf7c8-1691-471a-83b9-ccc4056e1f19"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(6 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/bar.jpg?alt=media&token=278837c9-5b95-4c5d-917c-2799ea84d3fd"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(7 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/desk.jpg?alt=media&token=647a8c72-a9e6-49ee-aa42-78b700759ed8"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(8 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/fire.jpg?alt=media&token=7ad89c7b-f097-4d79-85d9-443f469c210f"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(9 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/salon.jpg?alt=media&token=670e15f1-b531-4d36-8dbf-2aa07fe1af5f"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(10 / 11)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/reception.jpg?alt=media&token=76abcac2-0102-4539-83a7-0d9c2b66818e"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(11 / 11)</p> 
+                      </div>
+                    </li>
+
+            
 
                 </ul>
                 <div id="fsBtn" class="fs-icon" title="Expand/Close"></div>
