added misc page

--- a/public/source/design.html
+++ b/public/source/design.html
@@ -127,6 +127,20 @@
           <p class="design-title">Hand</p>
         </div>
 
+        <div class="list-item animated fadeInRight  col-12 col-sm-6 col-md-4   ">
+          <div class="imgs">
+            <a onclick="lightbox(16)" class="design-link" href="#">    
+              <div class="design-thumb" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/misc-thumb.png?alt=media&token=c47e3a9c-b3a8-4148-8a5b-028fe4241918)"></div>
+            </a>
+            <div class="icons">
+              <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/photoshop.jpg?alt=media&token=77bdd183-e12a-4d09-a14a-b97c451008d3" />
+              <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/illustrator.jpg?alt=media&token=540943b4-19b0-4988-a346-d7926931dde0" />                                
+              <img class="image-icons" width="20px" src="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/acad.jpg?alt=media&token=c5e56f11-4134-4911-91e2-f22a715816c1" />
+             </div>
+          </div>
+          <p class="design-title">Miscellaneous</p>
+        </div>
+
       </div>
     </div>
 
@@ -171,6 +185,9 @@
                             <p>preliminary parking logistics study</p> 
                         </div>
                     </li>
+
+                    <!-- HAND DRAWINGS -->
+
                     <li>
                       <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/pastel.jpg?alt=media&token=49b14a50-c370-43e0-bc8d-19116aa6c3cb"></a>
                       <div class="caption">
@@ -185,6 +202,9 @@
                           <p>graphite</p> 
                       </div>
                     </li>
+                    
+                    <!-- RENDERINGS -->
+
                     <li>
                       <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/dining.jpg?alt=media&token=9f9c8b5c-c38a-4bd0-b1f1-b2ab7b8ad729"></a>
                       <div class="caption">
@@ -264,6 +284,36 @@
                       </div>
                     </li>
 
+                    <!-- MISCELLANEOUS -->
+
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/logo.png?alt=media&token=33d497a4-fd65-4f99-8f52-b0b335eebb65"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(1 / 4)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/menu.jpg?alt=media&token=95db39f8-d80a-490a-9d2e-74e3bc14114a"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(2 / 4)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/ladies.jpg?alt=media&token=eff06b1c-e849-4e35-9378-6dc6d4940969"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(3 / 4)</p> 
+                      </div>
+                    </li>
+                    <li>
+                      <a class="ns-img" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/bocks.png?alt=media&token=acbfb792-19c7-4321-8d67-55ae7119ef4b"></a>
+                      <div class="caption">
+                          <h6></h6>
+                          <p>(4 / 4)</p> 
+                      </div>
+                    </li>
             
 
                 </ul>
