--- a/public/source/dev.html
+++ b/public/source/dev.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Design</title>
+    <title>Development</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <!-- <base href="/public"> -->
     <link rel="stylesheet" href="./assets/style.css">
