--- a/public/source/design.html
+++ b/public/source/design.html
@@ -13,7 +13,7 @@
   <body id="design-body">
     <div id="navbar">
       <a class="nav-link" href="./dev.html">Development</a>
-      <a class="nav-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume.pdf?alt=media&token=9085b70b-cd51-4883-83c4-26bfaaaab9af">Contact</a>      
+      <a class="nav-link hide" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume.pdf?alt=media&token=9085b70b-cd51-4883-83c4-26bfaaaab9af">Contact</a>      
     </div>
 
     <div class="bs-contain container">
