--- a/public/source/dev.html
+++ b/public/source/dev.html
@@ -14,7 +14,7 @@
   <body>
       <div id="navbar">
           <a class="nav-link" href="./design.html">Design</a>
-          <a class="nav-link" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume.pdf?alt=media&token=9085b70b-cd51-4883-83c4-26bfaaaab9af">Contact</a>      
+          <a class="nav-link hide" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume.pdf?alt=media&token=9085b70b-cd51-4883-83c4-26bfaaaab9af">Contact</a>      
         </div>
 
       <section id="dev-body">
