added resume and nav indicator

--- a/public/source/dev.html
+++ b/public/source/dev.html
@@ -14,7 +14,8 @@
   <body>
       <div id="navbar">
           <a class="nav-link" href="./design.html">Design</a>
-          <!-- <a class="nav-link hide" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume.pdf?alt=media&token=9085b70b-cd51-4883-83c4-26bfaaaab9af">Contact</a>       -->
+          <p class="nav-indicate nav-link">Development</p>
+          <a class="nav-link contact" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume%20-%202018.pdf?alt=media&token=6948d811-3dcf-4569-9003-b31d233f5071">Contact</a>      
         </div>
 
       <section id="dev-body">
