--- a/public/source/dev.html
+++ b/public/source/dev.html
@@ -21,11 +21,11 @@
       <section id="dev-body">
       
         <div class="dev-list">
-          <a class="dev-link"  href="https://collective.mediatech.ventures/"><h2 class="dev-title animated fadeInLeft">React JS</h2></a>
+          <a class="dev-link"  href="https://collective.mediatech.ventures/"><h2 class="dev-title">React <span class="animated fadeInLeft">JS</span></h2></h2></a>
         </div>
     
         <div class="dev-list" >
-            <a class="dev-link"  href="https://cruzmendez.github.io/"><h2 class="dev-title animated fadeInRight">Processing5.js</h2></a>
+            <a class="dev-link"  href="https://cruzmendez.github.io/"><h2 class="dev-title">Processing<span class="animated fadeInRight">5.js</span></h2></a>
         </div>
 
         <div class="dev-list dev-flex-wrap" >
@@ -40,9 +40,9 @@
 
         <div class="dev-flex-wrap">
         <div class="dev-list" >
-            <a class="dev-link"  href="https://cruzmendez.github.io/Foundry/index.html"><h2 class="dev-title animated fadeInRight">Bootstrap /</h2></a>
+            <a class="dev-link"  href="https://cruzmendez.github.io/Foundry/index.html"><h2 class="dev-title">Bootstrap /</h2></a>
         </div>
-
+        <div class="space"></div>
         <div class="dev-list" >
           <a class="dev-link bstrap"  href="https://cruzmendez.github.io/moreBootstrap/index.html"><h2 class="dev-title animated fadeInLeft"> More Bootstrap</h2></a>
       </div>
