--- a/public/source/dev.html
+++ b/public/source/dev.html
@@ -29,6 +29,14 @@
         </div>
 
         <div class="dev-list dev-flex-wrap" >
+          <div class="flex-div"><h2 class="dev-link dev-title">Chromatherapy</h2></div>
+          <div class="flex-a">
+            <a class="dev-link"  href="https://cruzmendez.github.io/grid/"><h4 class="dev-title animated fadeInLeft">V1</h4></a>
+            <a class="dev-link"  href="https://cruzmendez.github.io/vector/"><h4 class="dev-title animated fadeInLeft">V2</h4></a>
+          </div>
+        </div>
+
+        <div class="dev-list dev-flex-wrap" >
           <div class="flex-div"><h2 class="dev-link dev-title">Interactive Logos</h2></div>
           <div class="flex-a">
             <a class="dev-link"  href="https://cruzmendez.github.io/HomesTourLogo/"><h4 class="dev-title animated fadeInLeft">V1</h4></a>
