--- a/public/source/design.html
+++ b/public/source/design.html
@@ -14,7 +14,7 @@
     <div id="navbar">
       <p class="nav-indicate nav-link">Design</p>
       <a class="nav-link" href="./dev.html">Development</a>
-      <a class="nav-link contact" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/CruzM-Resume%20-%202018.pdf?alt=media&token=6948d811-3dcf-4569-9003-b31d233f5071">Contact</a>      
+      <a class="nav-link contact" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/Cm2019.pdf?alt=media&token=1f91932b-a0c4-40a0-a56d-f88b0f5ffef2">Contact</a>      
     </div>
 
     <div class="bs-contain container">
