--- a/public/source/design.html
+++ b/public/source/design.html
@@ -12,7 +12,7 @@
   </head>
   <body id="design-body">
     <div id="navbar">
-      <p class="nav-indicate nav-link">Designn</p>
+      <p class="nav-indicate nav-link">Designnn</p>
       <a class="nav-link" href="./dev.html">Development</a>
       <a class="nav-link contact" href="https://firebasestorage.googleapis.com/v0/b/cruz-portfolio.appspot.com/o/Cm2019.pdf?alt=media&token=1f91932b-a0c4-40a0-a56d-f88b0f5ffef2">Contact</a>      
     </div>
